[tool.poetry]
name = "hyperlog-backend"
version = "0.1.0"
description = "Backend for hyperlog"
authors = []

[tool.poetry.dependencies]
python = "^3.6"
Django = "2.2"
graphene-django = "^2.10.1"
django-graphql-jwt = "^0.3.1"
Pillow = "^7.1.2"
psycopg2 = "^2.8.5"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.2"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
