[tool.black]
line-length = 79
exclude = '.*/migrations/'
target-version = ['py37']

[tool.poetry]
name = "hyperlog-backend"
version = "0.1.0"
description = "Backend for hyperlog"
authors = []

[tool.poetry.dependencies]
python = "^3.7"
Django = "2.2"
graphene-django = "^2.10.1"
django-graphql-jwt = "^0.3.1"
psycopg2-binary = "^2.8.5"
django-environ = "^0.4.5"
requests_oauthlib = "^1.3.0"
PyGithub = "^1.51"
PyJWT = "^1.7.1"
django-cors-headers = "^3.3.0"
boto3 = "^1.13.24"
channels = "^2.4.0"
daphne = "^2.5.0"
sentry-sdk = "^0.16.1"
whitenoise = {extras = ["brotli"], version = "^5.1.0"}
django-ses = "^1.0.1"
coolname = "^1.1.0"
phonenumberslite = "^8.12.11"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.2"
black = "^19.10b0"
pre-commit = "^2.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
